[tool.poetry]
name = "topcoat-dbt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.0"
dbt = "^0.17.2"
gspread = "^3.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
